gccida/g2/ggc_collect
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:1889:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v3; // r15 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:1895:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v9; // rbp 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:1896:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v10; // r13 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:1898:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v12; // r14 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:1899:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v13; // rbx 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:1902:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *k; // rbx 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:1904:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v18; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:1905:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v19; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:1921:15: error: use of undeclared identifier 'TV_GC_0'
timevar_push( TV_GC_0); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/ggc-page.c:2031:14: error: use of undeclared identifier 'TV_GC_0'
timevar_pop( TV_GC_0); 
             ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ggc_collect/src/obj/ggc-page.o] Error 1
